--- a/.env
+++ b/.env
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=eu-cdbr-west-01.cleardb.com
 DB_PORT=3306
-DB_DATABASE=ofaloo
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=heroku_3e6a1c4a03ff9d2
+DB_USERNAME=b5fcf4f8214c98
+DB_PASSWORD=15ec4d28
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
