--- a/.env
+++ b/.env
@@ -2,17 +2,17 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:y9sJ9WvFABxGwJsyW4bc0O+OePEF+AamkUpWD/wWnsI=
 APP_DEBUG=true
-APP_URL=http://ofalooback.test
+APP_URL=https://ofalooback.herokuapp.com/
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=eu-cdbr-west-01.cleardb.com
+DB_HOST=ofaloo.mysql.database.azure.com
 DB_PORT=3306
-DB_DATABASE=heroku_3e6a1c4a03ff9d2
-DB_USERNAME=b5fcf4f8214c98
-DB_PASSWORD=15ec4d28
+DB_DATABASE=ofaloo
+DB_USERNAME=ofaloo@ofaloo
+DB_PASSWORD=Maman@12
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
