--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:y9sJ9WvFABxGwJsyW4bc0O+OePEF+AamkUpWD/wWnsI=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=https://ofalooback.herokuapp.com/
 
 LOG_CHANNEL=stack
