--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:y9sJ9WvFABxGwJsyW4bc0O+OePEF+AamkUpWD/wWnsI=
 APP_DEBUG=false
 APP_URL=https://ofalooback.herokuapp.com/
