--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Ofaloo
 APP_ENV=production
 APP_KEY=base64:y9sJ9WvFABxGwJsyW4bc0O+OePEF+AamkUpWD/wWnsI=
 APP_DEBUG=false
@@ -26,13 +26,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=djidji.com.customer@gmail.com
+MAIL_PASSWORD=Maman@12
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=djidji.com.customer@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
