--- a/.env
+++ b/.env
@@ -26,13 +26,9 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
-MAIL_USERNAME=djidji.com.customer@gmail.com
-MAIL_PASSWORD=Maman@12
-MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=djidji.com.customer@gmail.com
+MAIL_DRIVER=mailgun
+MAILGUN_DOMAIN=sandboxf729c56ea17149a69dab0c0b23972f06.mailgun.org
+MAILGUN_SECRET=61054b71b9127632999e4f0f85621d7a-2a9a428a-e7ab35c2
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
