--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,15 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=djidji.com.customer@gmail.com
+MAIL_PASSWORD=Maman@12
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=djidji.com.customer@gmail.com
+MAIL_FROM_NAME="${APP_NAME}"
+
 MAIL_MAILER=smtp
 MAIL_HOST=mailhog
 MAIL_PORT=1025
