--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^8.12",
         "laravel/sanctum": "^2.9",
         "laravel/tinker": "^2.5",
+        "league/flysystem-cached-adapter": "1.1",
         "matthewbdaly/laravel-azure-storage": "^1.6"
     },
     "require-dev": {
