--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ DB_CONNECTION=mysql
 DB_HOST=ofaloo.mysql.database.azure.com
 DB_PORT=3306
 DB_DATABASE=ofaloo
-DB_USERNAME=ofaloo
+DB_USERNAME=atinux
 DB_PASSWORD=Maman@12
 
 BROADCAST_DRIVER=log
